Add Vercel analytics

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 	"type": "module",
 	"dependencies": {
 		"@types/jsdom": "^21.1.6",
+		"@vercel/speed-insights": "^1.0.3",
 		"jsdom": "^23.0.1",
 		"luxon": "^3.4.4",
 		"node-html-parser": "^6.1.12"
