--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 	"dependencies": {
 		"@types/jsdom": "^21.1.6",
 		"@vercel/analytics": "^1.1.1",
+		"@vercel/kv": "^1.0.1",
 		"@vercel/speed-insights": "^1.0.3",
 		"jsdom": "^23.0.1",
 		"luxon": "^3.4.4",
